# py-bose-csp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
src/pybosecsp/: __init__.py  client.py  discovery.py  exceptions.py  models.py
tests/: test_auto_volume.py  test_health_check.py  test_reconnect.py
