[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-bose-csp"
version = "0.3.3"
description = "Async Python library for controlling Bose CSP audio devices over TCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
]
authors = [
    { name = "BWilky" },
]
keywords = ["bose", "csp", "audio", "asyncio", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/BWilky/py-bose-csp"
Repository = "https://github.com/BWilky/py-bose-csp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
